--- a/demo.html
+++ b/demo.html
@@ -8,14 +8,14 @@
 
 	<!-- CSS include start -->
 
-	<link rel="stylesheet" type="text/css" href="jquery.ez.menu.css">
+	<link rel="stylesheet" type="text/css" href="jquery.ez.menu.min.css">
 
 	<!-- CSS include end -->
 
 
 	<!-- Javascript insert start -->
 
-	<script src="jquery.ez.menu.js"></script>
+	<script src="jquery.ez.menu.min.js"></script>
 	<script>
 	$(document).ready(function() {
 		$('#container')
@@ -39,7 +39,7 @@
 <body>
 
 <p id="about">
-	This <strong>jQuery</strong> plugin is <a href="jquery.ez.menu.js" title="Only ? kb">lightweight</a>, easy to <a href="README.html#install" title="Installation">install</a> / <a href="demo.css" title="Stylesheet">customize</a>, and works on all modern web browsers.
+	This <strong>jQuery</strong> plugin is <a href="jquery.ez.menu.min.js" title="Only 2 kb">lightweight</a>, easy to <a href="README.html#install" title="Installation">install</a> / <a href="demo.css" title="Stylesheet">customize</a>, and works on all modern web browsers.
 </p>
 
 
