--- a/demo.html
+++ b/demo.html
@@ -21,14 +21,16 @@
 		$('#container')
 			.EZMenu('generate', [
 				{ "name" : "Google", "url" : "http://google.com" },
-				{ "name" : "Bing",   "url" : "http://bing.com" },
-				{ "name" : "Other", "options" : [
-					{ "name" : "CPAN", "url" : "http://cpan.org" },
-					{ "name" : "Github", "url" : "http://github.com" },
-					{ "name" : "Sourceforge", "url" : "http://sourceforge.net" },
-					{ "name" : "More", "options" : [
-						{ "name" : "Ars Technica", "url" : "http://arstechnica.com" },
-						{ "name" : "Slashdot", "url" : "http://slashdot.org" }
+				{ "name" : "Bing", "url" : "http://bing.com" },
+				{ "name" : "Other",
+					"options" : [
+						{ "name" : "CPAN", "url" : "http://cpan.org" },
+						{ "name" : "Github", "url" : "http://github.com" },
+						{ "name" : "Sourceforge", "url" : "http://sourceforge.net" },
+						{ "name" : "More",
+							"options" : [
+								{ "name" : "Ars Technica", "url" : "http://arstechnica.com" },
+								{ "name" : "Slashdot", "url" : "http://slashdot.org" }
 					]}
 				]}
 			]);
