Simplified the API to allow for optional arguments

--- a/demo.html
+++ b/demo.html
@@ -15,11 +15,11 @@
 
 	<!-- Javascript insert start -->
 
-	<script src="jquery.ez.menu.min.js"></script>
+	<script src="jquery.ez.menu.minjs"></script>
 	<script>
 	$(document).ready(function() {
 		$('#container')
-			.EZMenu('generate', [
+			.EZMenu([
 				{ "name" : "Google", "url" : "http://google.com" },
 				{ "name" : "Bing", "url" : "http://bing.com" },
 				{ "name" : "Other", "options" : [
