--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
 
 	<!-- Javascript insert start -->
 
-	<script src="jquery.ez.menu.minjs"></script>
+	<script src="jquery.ez.menu.min.js"></script>
 	<script>
 	$(document).ready(function() {
 		$('#container')
@@ -51,7 +51,7 @@
 <body>
 
 <p id="about">
-	This <strong>jQuery</strong> plugin is <a href="jquery.ez.menu.min.js" title="Only 2.1 kb">lightweight</a>, easy to <a href="README.html#install" title="Installation">install</a> / <a href="demo.css" title="Stylesheet">customize</a>, and works on all modern web browsers.
+	This <strong>jQuery</strong> plugin is <a href="jquery.ez.menu.min.js" title="Only 2.3 kb">lightweight</a>, easy to <a href="README.html#install" title="Installation">install</a> / <a href="demo.css" title="Stylesheet">customize</a>, and works on all modern web browsers.
 </p>
 
 
