Updated page title

--- a/demo.html
+++ b/demo.html
@@ -46,7 +46,7 @@
 	<!-- CSS overrides end -->
 
 
-	<title>EZ Menu</title>
+	<title>EZ Menu - An easy way to create a navigation menu from JSON</title>
 </head>
 <body>
 
