--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
 
 	<!-- Javascript insert start -->
 
-	<script src="jquery.ez.menu.min.js"></script>
+	<script src="jquery.ez.menu.js"></script>
 	<script>
 	$(document).ready(function() {
 		$('#container')
