--- a/demo.html
+++ b/demo.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://www.google.com/jsapi"></script>
-	<script>
-		google.load('jquery','1.7.1');
-	</script>
-
-	<!-- CSS include start -->
-
-	<link rel="stylesheet" type="text/css" href="jquery.ez.menu.min.css">
-
-	<!-- CSS include end -->
-
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 	<!-- Javascript insert start -->
 
@@ -45,6 +35,13 @@
 	</script>
 
 	<!-- Javascript insert end -->
+
+
+	<!-- CSS include start -->
+
+	<link rel="stylesheet" type="text/css" href="jquery.ez.menu.min.css">
+
+	<!-- CSS include end -->
 
 
 	<!-- CSS overrides start -->
