--- a/README.html
+++ b/README.html
@@ -11,6 +11,8 @@
 
 <p>Create a HTML navigation menu and sub-menus from JSON with ease.</p>
 
+<img class="preview" src="preview.jpg">
+
 <h2>Features</h2>
 
 <ul>
