--- a/demo.html
+++ b/demo.html
@@ -14,23 +14,30 @@
 					{ "name" : "News", "url" : "http://news.google.com" },
 					{ "name" : "Tools", "options" : [
 						{ "name" : "Analytics", "url" : "http://google.com/analytics" },
-						{ "name" : "Maps", "url" : "http://maps.google.com" },
+						{ "name" : "Maps",      "url" : "http://maps.google.com" },
 						{ "name" : "Webmaster", "url" : "http://google.com/webmasters/tools" }
 					]}
 				]},
 				{ "name" : "Github", "url" : "http://github.com", "options" : [
 					{ "name" : "Projects", "options" : [
-						{ "name" : "Tidy-Table", "url" : "http://github.com/nuxy/Tidy-Table" },
+						{ "name" : "Tidy-Table",       "url" : "http://github.com/nuxy/Tidy-Table" },
 						{ "name" : "Poppy-Pagination", "url" : "http://github.com/nuxy/Poppy-Pagination" },
-						{ "name" : "SQLinJS", "url" : "http://github.com/nuxy/SQLinJS" }
+						{ "name" : "SQLinJS",          "url" : "http://github.com/nuxy/SQLinJS" }
 					]}
 				]},
 				{ "name" : "Other", "options" : [
-					{ "name" : "Coinbase", "url" : "http://coinbase.com" },
-					{ "name" : "Github", "url" : "http://github.com" },
+					{ "name" : "Coinbase",  "url" : "http://coinbase.com", "classname" : "custom_link" },
+					{ "name" : "Github",    "url" : "http://github.com" },
 					{ "name" : "Wikipedia", "url" : "http://wikipedia.org" }
 				]}
 			]);
+
+		// override menu event
+		$('a.custom_link').on('click', function(event) {
+			event.preventDefault();
+
+			alert('Coinbase - Bitcoin, safe and easy.');
+		});
 	});
 	</script>
 
