Fixed malformed JSON in source code example

--- a/README.html
+++ b/README.html
@@ -75,7 +75,7 @@ $(document).ready(function() {
 				{ "name" : "Menu List B", "options" : [
 					{ "name" : "Item 1B", "url" : "http://item1B.domain.com" },
 					{ "name" : "Item 2B", "url" : "http://item2B.domain.com",
-						"classname" : "custom_link" },
+						"classname" : "custom_link" }
 				]}
 			]}
 		]);
