--- a/README.html
+++ b/README.html
@@ -57,7 +57,7 @@
 
 <pre>$(selector).EZMenu(<a href="#options"><em>options</em></a>, <em>config</em>);</pre>
 
-<p>Add the following <em>JavaScript/CSS</em> between the <code>&lt;head&gt;&lt;/head&gt;</code> tags of your HTML document.</p>
+<p>Add the following JavaScript/CSS between the <code>&lt;head&gt;&lt;/head&gt;</code> tags of your HTML document.</p>
 
 <a name="example"></a>
 
