Updated package result file sizes and minor text changes

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
-	<!-- Javascript insert start -->
+	<!-- JavaScript insert start -->
 
 	<script src="jquery.ez.menu.min.js"></script>
 	<script>
@@ -41,7 +41,7 @@
 	});
 	</script>
 
-	<!-- Javascript insert end -->
+	<!-- JavaScript insert end -->
 
 
 	<!-- CSS include start -->
