Renamed JavaScript and CSS files to ez-menu - dropped jquery prefix

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
 
 	<!-- JavaScript insert start -->
 
-	<script src="jquery.ez.menu.min.js"></script>
+	<script src="ez-menu.min.js"></script>
 	<script>
 	$(document).ready(function() {
 		$('#container')
@@ -46,7 +46,7 @@
 
 	<!-- CSS include start -->
 
-	<link rel="stylesheet" type="text/css" href="jquery.ez.menu.min.css">
+	<link rel="stylesheet" type="text/css" href="ez-menu.min.css">
 
 	<!-- CSS include end -->
 
@@ -64,7 +64,7 @@
 <body>
 
 <p id="about">
-	This <strong>jQuery</strong> plugin is <a href="jquery.ez.menu.min.js" title="Only 2.7 kB">lightweight</a>, easy to <a href="README.html#install" title="Installation">install</a> / <a href="demo.css" title="Stylesheet">customize</a>, and works on all modern web browsers.
+	This <strong>jQuery</strong> plugin is <a href="ez-menu.min.js" title="Only 2.7 kB">lightweight</a>, easy to <a href="README.html#install" title="Installation">install</a> / <a href="demo.css" title="Stylesheet">customize</a>, and works on all modern web browsers.
 </p>
 
 
