--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 	var menu = 'ul.ez_menu';
 	</script>
 
-	<script src="jquery.ez.menu.min.js"></script>
+	<script src="ez-menu.min.js"></script>
 
 
 	<!-- QUnit tests begin (order is important) -->
@@ -22,7 +22,7 @@
 
 
 	<link rel="stylesheet" type="text/css" href="test/unit/qunit-1.14.0.css">
-	<link rel="stylesheet" type="text/css" href="jquery.ez.menu.min.css">
+	<link rel="stylesheet" type="text/css" href="ez-menu.min.css">
 
 	<title>EZ Menu - Plugin tests</title>
 </head>
