--- a/README.html
+++ b/README.html
@@ -42,11 +42,11 @@
 		<th>Role</th>
 	</tr>
 	<tr>
-		<td>jquery.ez.menu.min.js</td>
+		<td>ez-menu.min.js</td>
 		<td>The main script to be included from within your HTML document.</td>
 	</tr>
 	<tr>
-		<td>jquery.ez.menu.min.css</td>
+		<td>ez-menu.min.css</td>
 		<td>This style sheet that defines the "look & feel" of the menu bar and sub-menus</td>
 	</tr>
 </table>
@@ -63,7 +63,7 @@
 
 <pre>&lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"&gt;
 
-&lt;script src="/path/to/jquery.ez.menu.min.js"&gt;&lt;/script&gt;
+&lt;script src="/path/to/ez-menu.min.js"&gt;&lt;/script&gt;
 $(document).ready(function() {
 	$('#container')
 		.EZMenu([
@@ -82,7 +82,7 @@ $(document).ready(function() {
 });
 &lt;/script&gt;
 
-&lt;link rel="stylesheet" type="text/css" href="jquery.ez.menu.min.css"&gt;</pre>
+&lt;link rel="stylesheet" type="text/css" href="ez-menu.min.css"&gt;</pre>
 
 <h2>Plug-in Settings</h2>
 
