Replaced the JPG preview image with PNG version

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 
 <p>Create a HTML navigation menu and sub-menus from JSON with ease.</p>
 
-<img class="preview" src="preview.jpg">
+<img class="preview" src="preview.png">
 
 <h2>Features</h2>
 
