Updated the Plug-in Settings example - renamed options

--- a/README.html
+++ b/README.html
@@ -61,7 +61,7 @@
 
 <p>It's as simple as defining the target element <code>#container</code> using the <a href="http://api.jquery.com/category/selectors">jQuery selector</a> and passing configuration data as JSON.</p>
 
-<pre>$(selector).EZMenu(<a href="#options"><em>options</em></a>, <em>config</em>);</pre>
+<pre>$(selector).EZMenu(<a href="#settings"><em>settings</em></a>, <em>config</em>);</pre>
 
 <p>Add the following JavaScript/CSS between the <code>&lt;head&gt;&lt;/head&gt;</code> tags of your HTML document.</p>
 
@@ -92,9 +92,9 @@ $(document).ready(function() {
 
 <h2>Plug-in Settings</h2>
 
-<p>The following options can be passed to the plug-in main function as JSON</p>
+<p>The following settings can be passed to the plug-in main function as JSON</p>
 
-<a name="options"></a>
+<a name="settings"></a>
 
 <table border="1">
 	<tr>
