Updated project description and author website URL

--- a/demo.html
+++ b/demo.html
@@ -67,7 +67,7 @@
   <!-- CSS overrides end -->
 
 
-  <title>EZ Menu - An easy way to create a navigation menu from JSON</title>
+  <title>EZ Menu - Create a HTML navigation menu and sub-menus from JSON with ease</title>
 </head>
 <body>
 
