Cleaned up JSDoc and inline comments

--- a/README.html
+++ b/README.html
@@ -146,7 +146,7 @@ $(document).ready(function() {
 <pre>$('a.custom_link').on('click', function(event) {
   event.preventDefault();
 
-  // do something
+  // Do something
 });
 </pre>
 
