--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-<h1>EZ Menu</h1>
+<a href="https://github.com/nuxy/EZ-Menu"><img class="forkme_ribbon" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
+
+<h1>EZ Menu <a href="https://travis-ci.org/nuxy/EZ-Menu"><img class="build_status" src="https://travis-ci.org/nuxy/EZ-Menu.svg?branch=master" alt="Build Status"></a></h1>
 
 <p>Create a HTML navigation menu and sub-menus from JSON with ease.</p>
 
